# acdc-research-projects

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
docker/: Dockerfile  run.sh
reports/: README.md
reports/10-Processing-of-Traffic-Light-Status-Information-in-MPC-Planner/2023-09_MA_Leong_Hubbertz/acdc_relevant/catkin_workspace/src/workshops/section_5/v2x_map_generator/: package.xml
reports/10-Processing-of-Traffic-Light-Status-Information-in-MPC-Planner/2023-09_MA_Leong_Hubbertz/acdc_relevant/catkin_workspace/src/workshops/section_5/v2x_map_generator/config/: custom_mapem.yaml
reports/10-Processing-of-Traffic-Light-Status-Information-in-MPC-Planner/2023-09_MA_Leong_Hubbertz/acdc_relevant/catkin_workspace/src/workshops/section_5/v2x_map_generator/include/: map_generator.h
reports/10-Processing-of-Traffic-Light-Status-Information-in-MPC-Planner/2023-09_MA_Leong_Hubbertz/acdc_relevant/catkin_workspace/src/workshops/section_5/v2x_map_generator/src/: map_generator_node.cpp
reports/10-Processing-of-Traffic-Light-Status-Information-in-MPC-Planner/acdc_relevant/catkin_workspace/src/workshops/section_5/v2x_map_generator/: CMakeLists.txt
reports/10-Processing-of-Traffic-Light-Status-Information-in-MPC-Planner/acdc_relevant/catkin_workspace/src/workshops/section_5/v2x_map_generator/launch/: map_generator_node.launch
template/: demo.bag  demo.tiff  report.ipynb
topics/01-Domain-Adaptation-for-Semantic-Image-Segmentation/: README.md  task.ipynb
topics/02-Domain-Adaptation-for-Semantic-Point-Cloud-Segmentation/: README.md  Report_Topic2.ipynb  task.ipynb
topics/03-Domain-Adaptation-for-Lidar-Object-Detection/: README.md  task.ipynb
topics/04-Time-Series-Inverse-Perspective-Mapping/: README.md  task.ipynb
topics/05-Traffic-Light-Detection/: .gitignore  LICENSE.txt  README.md  task.ipynb
topics/06-Cross-Modal-Depth-Estimation-for-Traffic-Light-Detection/: README.md  task.ipynb
topics/06-Processing-of-Traffic-Light-Status-Information-in-MPC-Planner/: task.ipynb
topics/07-Cloud-Based-Neural-Network-Inference/: README.md  task.ipynb
topics/10-Processing-of-Traffic-Light-Status-Information-in-MPC-Planner/: README.md  task.ipynb
topics/11-Cloud-Based-Neural-Network-Inference/: task.ipynb
topics/12-Panoptic-Image-Segmentation/: .gitignore  README.md  task.ipynb
(+189 files in other folders)
