<?xml version="1.0"?>
<package format="2">
  <name>v2x_map_generator</name>
  <version>0.1.0</version>
  <description>The map_spat_generator package publishes a sample MAP and SPAT message</description>

  <maintainer email="jean-pierre.busch@ika.rwth-aachen.de">Jean-Pierre Busch</maintainer>
  <author email="jean-pierre.busch@ika.rwth-aachen.de">Jean-Pierre Busch</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>definitions</build_depend>
  <build_depend>xmlrpcpp</build_depend>
  <depend>geometry_msgs</depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>definitions</build_export_depend>
  <build_export_depend>xmlrpcpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>definitions</exec_depend>
  <exec_depend>xmlrpcpp</exec_depend>

</package>
